# toolkit_new

./: .gitignore  .gitmodules  CMakeLists.txt  toolkit.qrc
deploy/CoreData/RenderPaths/: DeferredWithOutlines.xml  ForwardWithOutlines.xml
deploy/CoreData/Shaders/GLSL/: Outline.glsl
deploy/CoreData/Techniques/: DiffNormalOutline.xml  DiffOutline.xml
deploy/Data/Materials/: Skybox.xml
deploy/Data/Materials/Tiles/: Grass.xml  GrassSelected.xml
deploy/Data/Models/Tiles/: Brick.mdl  DAEgrass.dae  Grass.mdl
include/: addnewbrushdialog.h  asset_view.h  brushgraphicsview.h  brushmenuwidget.h  camerasettingsdialog.h  clickableframe.h  component_widget.h  console.h  custom_dock_widget.h  details_view.h  editor_camera_controller.h  editor_camera_controls.h  editor_gizmo_component.h  editor_selection.h  editor_selection_controller.h  editor_selector.h  game_view.h  graph_view.h  hex_tile_grid.h  input_translator.h  listwidgetcust.h  managemapsdialog.h  managepluginsdialog.h  map_editor.h  math_utils.h  mtdebug_print.h  newmapdialog.h  objectview.h  outputview.h  prefab_editor.h  prefab_editor_dialog.h  prefab_view.h  scene_view.h  tile_occupier.h  tileview.h  toolkit.h  urho_attrib_edit_widget.h  urho_common.h  urho_editor.h  urho_game_view.h  (+3 more)
src/: addnewbrushdialog.cpp  asset_view.cpp  brushgraphicsview.cpp  brushmenuwidget.cpp  camerasettingsdialog.cpp  clickableframe.cpp  component_widget.cpp  console.cpp  custom_dock_widget.cpp  details_view.cpp  editor_camera_controller.cpp  editor_camera_controls.cpp  editor_gizmo_component.cpp  editor_selection.cpp  editor_selection_controller.cpp  editor_selector.cpp  game_view.cpp  graph_view.cpp  hex_tile_grid.cpp  input_translator.cpp  listwidgetcust.cpp  main.cpp  managemapsdialog.cpp  managepluginsdialog.cpp  map_editor.cpp  math_utils.cpp  mtdebug_print.cpp  newmapdialog.cpp  objectview.cpp  outputview.cpp  prefab_editor.cpp  prefab_editor_dialog.cpp  prefab_view.cpp  scene_view.cpp  tile_occupier.cpp  tileview.cpp  toolkit.cpp  urho_attrib_edit_widget.cpp  urho_editor.cpp  urho_game_view.cpp  (+3 more)
ui/: addnewbrushdialog.ui  asset_view.ui  brushmenuwidget.ui  camerasettings.ui  console.ui  details_view.ui  editmapdialog.ui  editplugindialog.ui  game_view.ui  graph_view.ui  manage_maps_dialog.ui  manage_plugins_dialog.ui  map_editor.ui  newmap.ui  newplugindialog.ui  objectview.ui  plugindetailsdialog.ui  prefab_editor_dialog.ui  prefab_view.ui  tileview.ui  toolkit.ui  vector2d_int_editor.ui
